--- a/css/styles.css
+++ b/css/styles.css
@@ -27,3 +27,17 @@ article {
   font-size: 16px;
   margin: 25px 50px;
 }
+
+footer {
+    background-color: powderblue;
+    font-size: 50%;
+    position: fixed;
+    bottom: 0px;
+    color: #000000;
+ }
+ footer a {
+     color: #000000;
+ }
+ footer a:hover {
+     color: #000000;
+ }
