--- a/css/tips.css
+++ b/css/tips.css
@@ -21,3 +21,17 @@ button {
   display: inline-block;
   font-size: 16px;
 }
+
+footer {
+    background-color: #00BFFF;
+    font-size: 30%;
+    position: fixed;
+    bottom: 0px;
+    color: #000000;
+ }
+ footer a {
+     color: #000000;
+ }
+ footer a:hover {
+     color: #000000;
+ }
